--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "author": "",
   "license": "ISC",
   "devDependencies": {
+    "autoprefixer": "^6.4.0",
     "babel-core": "^6.10.4",
     "babel-eslint": "^6.1.2",
     "babel-loader": "^6.2.4",
@@ -40,6 +41,7 @@
     "postcss-loader": "^0.9.1",
     "sanitize.css": "^4.1.0",
     "sass-loader": "^4.0.0",
+    "sass-resources-loader": "^1.1.0",
     "shelljs": "^0.6.0",
     "swig": "^1.4.2",
     "url-loader": "^0.5.7",
